# Defensive-Semantics-Physics-Model

./: .flake8  .gitignore  AUDIT_REPORT.md  CODING_AGENTS.md  LICENSE  README.md  agents.md  enhanced_system_prompt.md  pyproject.toml  spm_agents_design.md
docs/: core_equations.md
examples/: demo_drift.py
src/spm_defense/: __init__.py  agents.py  calculations.py  models.py  tokenization.py
src/spm_defense.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_agents.py  test_calculations.py  test_tokenization.py
