[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spm-defense"
version = "0.3.0"
description = "SPM Defense Architecture v3.0 (Code: MIT | Theory: CC BY-NC-SA 4.0)"
readme = "README.md"
authors = [
  { name="Mnemonic Silverstone" },
]
license = { text = "MIT" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "flake8",
]

[tool.setuptools.packages.find]
where = ["src"]
